1. practice about how to create a table
Signed-off-by: zzcedar <zzcedar@126.com>

--- a/ch01/1.1/1.1_1.md
+++ b/ch01/1.1/1.1_1.md
@@ -78,15 +78,19 @@ Suppose that Smartphone A has 256MB RAM and 32GB ROM, and the resolution of its 
 a) Smartphone B has the most RAM of these three smartphones.  
 b) Smartphone C has more ROM or a higher resolution camera than Smartphone B.  
 c) Smartphone B has more RAM, more ROM, and a higher resolution camera than Smartphone A.    
-d) If Smartphone B has more RAM and more ROMthan Smartphone C, then it also has a higher resolution camera.  
-e) Smartphone A has more RAM than Smartphone B if and only if Smartphone B has moreRAMthan Smartphone A.
+d) If Smartphone B has more RAM and more ROM than Smartphone C, then it also has a higher resolution camera.  
+e) Smartphone A has more RAM than Smartphone B if and only if Smartphone B has more RAM than Smartphone A.
 
 #### Solution 
 
-a->T  
-b->F
+|Proposition index | truth value |  
+|:----------------:|:-----------:|  
+|  a  | T |  
+|  b  | F |  
+|  c  | F |  
+|  d  | F |  
+|  e  | F |
 
-~~Mistaken text.~~
 
 | Tables        | Are           | Cool  |  
 | ------------- |:-------------:| -----:|  
