--- a/ch01/1.1/1.1_1.md
+++ b/ch01/1.1/1.1_1.md
@@ -91,6 +91,82 @@ e) Smartphone A has more RAM than Smartphone B if and only if Smartphone B has m
 |  d  | F |  
 |  e  | F |
 
+#### 7
+Suppose that during the most recent fiscal year, the annual
+revenue of `Acme Computer` was 138 billion dollars
+and its net profit was 8 billion dollars, the annual revenue
+of `Nadir Software` was 87 billion dollars and its net profit was 5 billion dollars, and the annual revenue of `Quixote Media` was 111 billion dollars and its net profit was 13 billion dollars. Determine the truth value of each of
+these propositions for the most recent fiscal year.  
+a) Quixote Media had the largest annual revenue.  
+b) Nadir Software had the lowest net profit and Acme
+Computer had the largest annual revenue.  
+c) Acme Computer had the largest net profit or Quixote
+Media had the largest net profit.  
+d) If Quixote Media had the smallest net profit, then
+Acme Computer had the largest annual revenue.  
+e) Nadir Software had the smallest net profit if and only
+if Acme Computer had the largest annual revenue.
+
+#### Solution
+
+|Proposition index | truth value |  
+|:----------------:|:-----------:|  
+|  a  | F |  
+|  b  | T |  
+|  c  | T |  
+|  d  | T |  
+|  e  | F |
+
+#### 8 
+
+Let p and q be the propositions  
+	p : I bought a lottery ticket this week.  
+	q : I won the million dollar jackpot.  
+Express each of these propositions as an English sentence.
+a) ¬p   
+b) p ∨ q   
+c) p → q  
+d) p ∧ q   
+e) p ↔ q    
+f) ¬p →¬q  
+g) ¬p ∧¬q   
+h) ¬p ∨ (p ∧ q)
+
+#### Solution
+
+a) I didn't buy a lottery ticket this week.  
+b) I bought a bottery ticket this week, or I won the million dollar jackpot.  
+c) I bought a bottery ticket this week, then I won the million dollar jackpot.  
+d) I bought a bottery ticket this week, and I won the million dollar jackpot.  
+e) I bought a bottery ticket this week if and only if I won the million dollar jackpot.  
+f) If I didn't buy a lottery ticket this week, then I didn't won the million dollar jackpot.  
+g) I didn't buy a lottery ticket this week, and I didn't won the million dollar jackpot.  
+h) I didn't buy a lottery ticket this week, or I bought a lottery this week and I won the million dollar jackpot.
+
+#### 9
+
+Let p and q be the propositions “Swimming at the New
+Jersey shore is allowed” and “Sharks have been spotted
+near the shore,” respectively. Express each of these compound
+propositions as an English sentence.
+a) ¬q  
+b) p ∧ q  
+c) ¬p ∨ q  
+d) p →¬q   
+e) ¬q → p   
+f) ¬p →¬q  
+g) p ↔¬q  
+h) ¬p ∧ (p∨ ¬q) 
+
+#### Solution
+
+a) 
+
+
+
+
+
+
 
 | Tables        | Are           | Cool  |  
 | ------------- |:-------------:| -----:|  
